use valueOf for Integer and Boolean where possible to prevent unnecessary creation of Java objects